kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demoapp          
    spec:
      containers:
      - name: demoapp
        image: quay.io/user1/demoapp:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            protocol: TCP
